--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,56 @@
     height: 100%;
     overflow: auto;
     position: absolute;
-    box-sizing: border-box;
     user-select: none;
+}
+
+.carousel {
+    position: relative;
+}
+
+.next,
+.prev {
+    position: absolute;
+    background: white;
+    border-radius: 30px;
+    width: 40px;
+    height: 40px;
+    margin-top: 25%;
+    user-select: none;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 28px;
+    z-index: 2;
+}
+
+.refresh {
+    padding: 10px;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    width: 20px;
+    height: 20px;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.next {
+    right: 10px;
+}
+
+.prev {
+    left: 10px;
+}
+
+img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
 }
 
 .item {
@@ -117,14 +165,16 @@
 }
 
 .logo {
-    width: 30px;
-    height: 30px;
+    position: relative;
 }
 
-.card {
+.pullcard {
     cursor: -webkit-grab;
-    align-items: center;
-    justify-content: center;
+}
+
+.cardbody {
+    position: relative;
+    color: white;
 }
 
 .footer {
@@ -157,4 +207,46 @@
 .content {
     min-height: 70%;
     position: relative;
+}
+
+.expanded-card {
+    position: relative;
+    top: 0px;
+    left: 0px;
+    width: 500px;
+    height: 700px;
+    z-index: 1;
+    display: grid;
+}
+
+.expanded-card-h {
+    font-size: 27px;
+    color: var(--fg);
+    width: 300px;
+    padding: 5px;
+    background-image: url("https://picsum.photos/id/1024/400");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+}
+
+.expanded-card p {
+    width: 300px;
+    padding: 5px;
+}
+
+.normal-card {
+    width: 250px;
+    height: 250px;
+    margin: 10px;
+    display: grid;
+    background-image: url("https://picsum.photos/id/1024/400");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+}
+
+.normal-card h1 {
+    font-size: 28px;
+    color: var(--fg);
+    padding: 5px;
+    text-align: center;
 }
