--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-family: 'Agency FB', Arial;
+    font-family: 'Century Gothic';
     height: 100%;
     width: 100%;
     margin: 0;
